<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="super_duo">Super Duo</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone : my own app</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="my_own_apps">My Own Apps!</string>
    <string name="mealplanner">Meal Planner</string>
    <string name="openbeelab">Openbeelab</string>
</resources>
